src/yini_test/cases/golden/strict/valid/lists/list-of-booleans.strict.yini
@yini strict

^ Lists
items = [true, false, true]

/END

