src/yini_test/cases/golden/strict/invalid/lists/list-with-missing-value.strict.yini
@yini strict

^ Lists
items = [1, , 3]

/END

